tests/paczka1/fuzzy1/61470896.err
Error in line 8: XDNP89W A467 13,9
Error in line 6: gGpS A467 26,2
Error in line 9: eMUOpw A456 79,8
Error in line 23: eMUOpw A467 18,8
Error in line 30: 7q8N4pmxOd A456 7l,5
Error in line 29: gGpS S655 87,6
Error in line 16: 7q8N4pmxOd S710 1,5
Error in line 33: 7q8N4pmxOd A456 217,1
